# warp3d

./: .gitignore  CMakeLists.txt  Makefile.linux_Intel.mpi_omp  Makefile.linux_Intel.omp  Makefile.windows.nmake  README  README.md  README_Linux_Users  README_Mac_OS_X_Users  README_Windows_Users  install_libs_from_remote  warp3d_script_linux_Intel_hybrid  warp3d_script_linux_Intel_openmp  warp3d_script_linux_gfortran  warp3d_script_linux_hybrid  warp3d_script_linux_openmp  warp3d_script_macOS  warp3d_script_mac_os_x  warp3d_script_mac_os_x_gfortran  warp3d_script_mac_os_x_intel  warp3d_script_windows
cmake/: FindHYPRE.cmake  FindMETIS.cmake  FindMKL.cmake
combine_mpi_results_files/: README  build_linux  build_linux64  build_osx  combine_mpi_results.f  combine_mpi_results_driver.f  combine_mpi_results_flat_subs.f  combine_mpi_results_patran_subs.f  combine_mpi_results_support_subs.f  compare_flat_element_stream.f  compare_flat_nodal_stream.f  compare_flat_nodal_text.f  compare_patran_binary.f  compare_patran_formatted.f
combine_mpi_results_files/compare_programs/: compare_flat_element.f  compare_flat_nodal.f  compare_patran_element.f  compare_patran_nodal.f
example_problems_cp/: README_CP
example_problems_cp/hardening_and_temperature/: angles  cottrel_stokes.input  cottrell_stokes.inp  cottrell_stokes.output  figure_fixes.pptx  get_results.inp  isothermal_600K.inp  isothermal_600K.input  isothermal_600K.out  isothermal_RT.inp  isothermal_RT.input  isothermal_RT.out  isothermal_RT_voce.inp  make_cs_plot.py  plot_cotrell_stokes.data  plot_isothermal_600K.data  plot_isothermal_RT.data  results.pptx
example_problems_cp/mpi_restart/: bulk_data.inp  cp_mpi.inp  cp_mpi.input  get_output.inp  restart.inp  restart.input
example_problems_cp/simple_voce/: angles  angles.inp  isothermal_RT_voce.inp  make_plot.py  make_simple_voce_plot.py  output_cmds.inp  results_for_plotting  warp3d_stretch_relax.inp
example_problems_cp/size_effect/: coord_grain_size_0.001mm.inp  coord_grain_size_0.1mm.inp  get_output.inp  incid.inp  loading.inp  patexproc  size-0.001.warp3d  size-0.1.warp3d  size_0.001mm.inp  size_0.1mm.inp
example_problems_for_READMEs/: mt_cohes_4_cpu  mt_cohes_4_cpu.inp  mt_cohes_4_ranks.inp  mt_cohes_constraints.inp  mt_cohes_coord_incid.inp  mt_cohes_get_results.inp  test_18_constraints.inp  test_18_coords_incid.inp  test_18a  test_18a.inp  test_18b  test_18b.inp
example_problems_for_READMEs/void_growth_intro_presentation/: coordinates.inp  get_results.inp  incidences.inp  warp3d_nondim.inp
example_problems_mpi/: README  fgm_crack_panel  fgm_crack_panel_therm  mt_cohes_4_cpu  zlist
example_problems_mpi/big_cvn_models/: README
example_problems_mpi/ct_ctoa/: input_2_procs  input_2_procs_a  input_2_procs_a_restart
example_problems_mpi/explosive_test/: input  patran.neut
example_problems_mpi/pipe_crush/: input_2_domains  patran_neutral  restart_2_domains
example_problems_mpi/steel_bldg_joint/: domain_def  (+1 more)
example_problems_threads/: README  check_tests  clean_dir.bash  test_1  test_10  test_10_restart  test_11  test_12  test_14  test_15  test_16  test_17  test_17.logos  test_18  test_18_constraints.inp  test_18_coords_incid.inp  test_18_get_j  test_18_patran.out  test_18a  test_18b  test_18c  test_18d  test_18e  test_19  test_1_get_output  test_1a  test_20  test_20_get_j  test_20_patran.out  test_21  test_22  test_22_data.inp  test_22_get_j  test_22_patran.out  test_23  test_23_cons  test_23_coords  test_23_incids  test_23_patran.out  test_24  (+132 more)
fracture_models/: README  buried_circular_flaw  buried_flaw  ct_ctoa_growth  mt_half  ssy_growth
manual_tex_files/: App_C.tex  App_F.tex  App_H.tex  App_K.tex  README  Sect_1_1.tex  Sect_1_2.tex  Sect_1_3.tex  Sect_1_4.tex  Sect_1_5.tex  Sect_1_6.tex  Sect_1_7.tex  Sect_1_8.tex  Sect_1_9.tex  Sect_2_1.tex  Sect_2_10.tex  Sect_2_11.tex  Sect_2_12.tex  Sect_2_13.tex  Sect_2_14.tex  Sect_2_15.tex  Sect_2_2.tex  Sect_2_3.tex  Sect_2_4.tex  Sect_2_5.tex  Sect_2_6.tex  Sect_2_7.tex  Sect_2_8.tex  Sect_2_9.tex  Sect_3_1.tex  Sect_3_10.tex  Sect_3_11.tex  Sect_3_12.tex  Sect_3_13.tex  Sect_3_2.tex  Sect_3_3.tex  Sect_3_8.tex  Sect_5_1.tex  Sect_5_4.tex  Sect_6_1.tex  (+11 more)
old_code/: recent_features
packet_dir/: packet_reader.f
pat_combine/: README  build_linux64  build_osx  clean_linux_mac  compare_binary.f  pat_combine.f
patran_templates/: warp_accel.res_tmpl  warp_elem_domains_blocks.res_tmpl  warp_elem_mm10.res_tmpl  warp_elem_strain.res_tmpl  warp_elem_stress.res_tmpl  warp_node_stress.res_tmpl  warp_node_temps.res_tmpl  warp_velocities.res_tmpl
patwarp/: CMakeLists.txt  README  compile_patwarp_linux  compile_patwarp_linux64  compile_patwarp_osx  compile_patwarp_windows.bat  patwarp.f  patwarp_module.f  patwarp_windows_mac.f  pid2cid.py
src/: CMakeLists.txt  LICENSE  Makefile.linux.inc  Makefile.linux.mpi_omp  Makefile.linux.omp  Makefile.linux_Intel.inc  Makefile.linux_Intel.mpi_omp  Makefile.linux_Intel.omp  Makefile.linux_em64t.inc  Makefile.linux_em64t.mpi_omp  Makefile.linux_em64t.omp  Makefile.linux_gfortran.omp  Makefile.mac_os_x.inc  Makefile.mac_os_x.omp  Makefile.osx  Makefile.windows.nmake  Makewarp.bash  Makewarp.bat  Makewarp_jom.bat  README  adapt_check.f  addifv.f  addmas.f  allocate_damage.f  allocate_load.f  aplacc.f  assemble_code.f  bars.f  bdbt.f  blcmp1.f  bmod.f  chk_stp_reduce.f  chk_stp_reduce_cohes.f  chk_stp_reduce_ctoa.f  chk_stp_reduce_gurson.f  chk_stp_reduce_smcs.f  chkcrack.f  chkcrack_cohesive.f  chkcrack_ctoa.f  chkcrack_gurson.f  (+274 more)
tecplot/: tecplot_patran.f  tecplot_tutorial.ppt
tools/: adjust_midside_nodes.f  clean_directories  compare_files  convert_coords_to_binary_stream.f  convert_incids_to_binary_stream.f  cvs_commit_script  find_string.f  keyword_search.cc  makefile_depend_checker  strip_make.f
verification/: run_J_tests.bash  run_J_tests.py  run_J_tests_Linux.bash  run_J_tests_gfortran.bash  run_mpi_tests.bash  run_test_Linux.bash  run_test_gfortran.bash  run_tests.bash  run_tests.py
warp3d2exii/: README  femodel.py  pat2exii  patran.py  readers.py  warp3d2exii  writers.py
(+2191 files in other folders)
